# payment-processing-test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
app/: di.py  main.py
app/api/: __init__.py  auth.py  exceptions.py  schemas.py
app/api/payments/: router.py  schemas.py
app/consumers/: app.py  payments.py
app/domain/: base.py  outbox.py  payments.py
app/infra/: config.py  http.py  logging.py
app/infra/broker/: __init__.py  connection.py  topology.py
app/infra/db/: connection.py  utils.py
app/infra/db/alembic/: README  env.py
app/infra/db/alembic/versions/: 0001_initial.py
app/infra/db/models/: __init__.py  outbox.py  payments.py
app/infra/db/repos/: __init__.py  base.py  exceptions.py  outbox.py  payments.py
app/infra/redis/: connection.py  lock.py
app/logic/: utils.py
app/logic/handlers/: base.py  payments.py  processing.py
app/logic/middlewares/: __init__.py  retry.py
app/logic/payments/: exceptions.py  models.py  service.py
app/logic/webhooks/: service.py
app/workers/: outbox.py
tests/: conftest.py  test_api_payments.py  test_consumer_payments.py  test_idempotency.py  test_outbox.py  test_unit_utils.py
