[project]
name = "payment-processing-test"
version = "0.1.0"
description = "Async payment processing service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "faststream[rabbit]>=0.5.30",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "orjson>=3.10.0",
    "click>=8.1.0",
    "dishka>=1.4.0",
    "ruff>=0.15.17",
    "psycopg>=3.3.4",
    "respx>=0.23.1",
    "pytest>=9.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,rabbitmq,redis]>=4.8.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "N", "S", "A", "COM", "T20"]
ignore = ["S101", "COM812", "B008", "UP046"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"manage.py" = ["T20", "S104"]
"tests/**/*.py" = ["S101", "S105", "S106"]
"app/infra/db/alembic/**/*.py" = ["E501"]
"app/logic/handlers/processing.py" = ["S311", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "integration: integration tests using testcontainers",
]
